@startuml
left to right direction
skinparam shadowing false
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam wrapWidth 120
skinparam linetype ortho

class Teacher {
  id
  username
  is_active
}

package "Tài khoản & tích hợp" {
  class TeacherCodeforcesCredential {
    id
    teacher_id
    codeforces_handle
  }

  class DiscordBotCredential {
    id
    singleton_key
    bot_health_status
  }
}

package "Học sinh & lớp học" {
  class Student {
    id
    teacher_id
    full_name
    status
  }

  class StudentDiscordCredential {
    id
    student_id
    discord_user_id
  }

  class Class {
    id
    teacher_id
    name
    status
  }

  class Enrollment {
    id
    student_id
    class_id
    enrolled_at
  }

  class ClassSchedule {
    id
    class_id
    day_of_week
  }
}

package "Buổi học & tài chính" {
  class Session {
    id
    class_id
    scheduled_at
    status
  }

  class Attendance {
    id
    session_id
    student_id
    status
  }

  class FeeRecord {
    id
    student_id
    session_id
    amount
    status
  }

  class Transaction {
    id
    student_id
    amount
    type
  }
}

package "Discord & Codeforces" {
  class ClassDiscordBinding {
    id
    class_id
    discord_guild_id
  }

  class Gym {
    id
    class_id
    title
    gym_id
  }

  class GymProblem {
    id
    topic_id
    problem_index
  }

  class GymStanding {
    id
    topic_id
    student_id
    problem_id
    solved
  }
}

Teacher "1" -- "0..1" TeacherCodeforcesCredential
Teacher "1" -- "0..*" Student
Teacher "1" -- "0..*" Class
Teacher "1" -- "0..*" Gym

Student "1" -- "0..1" StudentDiscordCredential
Student "1" -- "0..*" Enrollment
Class "1" -- "0..*" Enrollment
Class "1" -- "0..*" ClassSchedule
Class "1" -- "0..*" Session
Class "1" -- "0..1" ClassDiscordBinding
Class "1" -- "0..*" Gym

Session "1" -- "0..*" Attendance
Student "1" -- "0..*" Attendance
Session "1" -- "0..*" FeeRecord
Student "1" -- "0..*" FeeRecord
Enrollment "1" -- "0..*" FeeRecord
Student "1" -- "0..*" Transaction

Gym "1" -- "0..*" GymProblem
Gym "1" -- "0..*" GymStanding
GymProblem "1" -- "0..*" GymStanding
Student "1" -- "0..*" GymStanding

note bottom of Teacher
  Nhiều bảng có teacher_id để phân vùng dữ liệu theo giáo viên.
  Bảng quan hệ bên dưới liệt kê đầy đủ các khóa ngoại.
end note

@enduml
